--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -298,13 +298,13 @@ a
 			.bio
 				padding 15px 20px 20px 20px
 				font-weight 20
-				line-height 1.2em
+				line-height 1.3em
 				font-size 0.9em
 			
 	
 #venue
 	clear both
-	padding 160px 0
+	padding 100px 0
 	
 	#venuebg
 		padding 100px
@@ -322,11 +322,12 @@ table.colors
 	width 100%
 	font-size 1.7em
 	line-height 1.0em
-	margin-bottom 3px
+	border-bottom 1px solid #f4faff
 	
 	td
-		padding 3px 6px 4px 6px
+		padding 3px 6px 5px 6px
 		font-weight bold
+		height 5px
 		
 		a
 			float right
@@ -356,22 +357,6 @@ table.colors
 	td:nth-child(6)
 		background jscampBlue
 		width 30%
-			
-#scrollinfo
-	display none
-	position absolute
-	bottom 10px
-	left 0px
-	right 0px
-	text-align center
-	
-	span
-		position relative
-		display block
-		transform rotate(90deg)
-		font-size 2em
-		color #ddd
-		animation bounce 0.6s infinite ease-out
 
 .jscamp
 	color jscampBlue
