--- a/static/css/style.css
+++ b/static/css/style.css
@@ -341,6 +341,7 @@ a {
   margin: 30px auto 0 auto;
   width: 800px;
   font-size: 1em;
+  line-height: 1.3em;
 }
 #js {
   margin-left: 5px;
@@ -351,6 +352,9 @@ a {
   font-family: Helvetica, Arial;
   padding: 0.8em 0.2em 0em 0.6em;
   background: #ffe100;
+}
+#love {
+  color: #eb0e0e;
 }
 #sessions {
   width: 800px;
@@ -491,6 +495,34 @@ a {
   -ms-border-radius: 8px 0 0 0;
   border-radius: 8px 0 0 0;
 }
+#sessions .speakers li .links {
+  float: right;
+}
+#sessions .speakers li .links a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  -webkit-border-radius: 22px;
+  -moz-border-radius: 22px;
+  -o-border-radius: 22px;
+  -ms-border-radius: 22px;
+  border-radius: 22px;
+  margin: 6px 6px;
+}
+#sessions .speakers li .links a:hover {
+  background-color: #38acec;
+  -webkit-animation: rotate 0.3s linear;
+  -moz-animation: rotate 0.3s linear;
+  -o-animation: rotate 0.3s linear;
+  -ms-animation: rotate 0.3s linear;
+  animation: rotate 0.3s linear;
+}
+#sessions .speakers li .links a.twitter {
+  background-image: url("../img/twitter.png");
+  background-repeat: no-repeat;
+  background-position: 6px 6px;
+}
 #sessions .speakers li .name {
   font-family: Courier, monospace;
   color: #38acec;
@@ -569,14 +601,6 @@ table.colors td:nth-child(6) {
 }
 .asia {
   color: #ffa500;
-}
-a.twitter {
-  color: #fff;
-  background: #4099ff !important;
-}
-a.facebook {
-  color: #fff;
-  background: #3b5998 !important;
 }
 @-moz-keyframes punch {
   0% {
@@ -1113,108 +1137,88 @@ a.facebook {
     transform: rotate(-80deg);
   }
 }
-@-moz-keyframes bounce {
+@-moz-keyframes rotate {
   0% {
-    top: 0px;
-  }
-
-  20% {
-    top: -10px;
-  }
-
-  24% {
-    top: -11px;
-  }
-
-  28% {
-    top: -10px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-    top: 0px;
+    -webkit-transform: rotate(359deg);
+    -moz-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+    -ms-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
-@-webkit-keyframes bounce {
+@-webkit-keyframes rotate {
   0% {
-    top: 0px;
-  }
-
-  20% {
-    top: -10px;
-  }
-
-  24% {
-    top: -11px;
-  }
-
-  28% {
-    top: -10px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-    top: 0px;
+    -webkit-transform: rotate(359deg);
+    -moz-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+    -ms-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
-@-o-keyframes bounce {
+@-o-keyframes rotate {
   0% {
-    top: 0px;
-  }
-
-  20% {
-    top: -10px;
-  }
-
-  24% {
-    top: -11px;
-  }
-
-  28% {
-    top: -10px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-    top: 0px;
+    -webkit-transform: rotate(359deg);
+    -moz-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+    -ms-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
-@-ms-keyframes bounce {
+@-ms-keyframes rotate {
   0% {
-    top: 0px;
-  }
-
-  20% {
-    top: -10px;
-  }
-
-  24% {
-    top: -11px;
-  }
-
-  28% {
-    top: -10px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-    top: 0px;
+    -webkit-transform: rotate(359deg);
+    -moz-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+    -ms-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
-@keyframes bounce {
+@keyframes rotate {
   0% {
-    top: 0px;
-  }
-
-  20% {
-    top: -10px;
-  }
-
-  24% {
-    top: -11px;
-  }
-
-  28% {
-    top: -10px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-    top: 0px;
+    -webkit-transform: rotate(359deg);
+    -moz-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+    -ms-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
